--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -9,13 +9,16 @@
       href="{{ 'three.ico' | asset_url }}"
       type="image/x-icon">
     {{ content_for_header }}
+    <link rel="stylesheet" href="{{ 'styles.css' | asset_url }}">
   </head>
   <body>
+
+    {% section 'header' %}
 
     <main id="main" role="main">
       {{ content_for_layout }}
     </main>
 
-    <h1>Hello World</h1>
+    {% section 'footer' %}
   </body>
 </html>
